--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -1,6 +1,7 @@
-# CodeRabbit configuration for paperclips-v2
+# yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
+
 language: en-US
-tone_instructions: ''
+tone_instructions: ""
 early_access: true
 enable_free_tier: true
 
@@ -8,10 +9,10 @@ reviews:
   profile: chill
   request_changes_workflow: false
   high_level_summary: true
-  high_level_summary_placeholder: '@coderabbitai summary'
+  high_level_summary_placeholder: "@coderabbitai summary"
   high_level_summary_in_walkthrough: true
-  auto_title_placeholder: '@coderabbitai'
-  auto_title_instructions: ''
+  auto_title_placeholder: "@coderabbitai"
+  auto_title_instructions: ""
   review_status: true
   commit_status: true
   fail_commit_status: false
@@ -33,7 +34,7 @@ reviews:
   path_instructions: []
   abort_on_close: true
   disable_cache: false
-  
+
   auto_review:
     enabled: true
     auto_incremental_review: true
@@ -42,26 +43,26 @@ reviews:
     drafts: true
     base_branches: []
     ignore_usernames: []
-  
+
   finishing_touches:
     docstrings:
       enabled: true
     unit_tests:
       enabled: true
-  
+
   pre_merge_checks:
     docstrings:
       mode: warning
       threshold: 80
     title:
       mode: warning
-      requirements: ''
+      requirements: ""
     description:
       mode: warning
     issue_assessment:
       mode: warning
     custom_checks: []
-  
+
   tools:
     ast-grep:
       rule_dirs: []
@@ -69,8 +70,6 @@ reviews:
       essential_rules: true
       packages: []
     shellcheck:
-      enabled: true
-    ruff:
       enabled: true
     markdownlint:
       enabled: true
@@ -87,19 +86,6 @@ reviews:
       level: default
     biome:
       enabled: true
-    hadolint:
-      enabled: true
-    swiftlint:
-      enabled: true
-    phpstan:
-      enabled: true
-      level: default
-    phpmd:
-      enabled: true
-    phpcs:
-      enabled: true
-    golangci-lint:
-      enabled: true
     yamllint:
       enabled: true
     gitleaks:
@@ -112,8 +98,6 @@ reviews:
       enabled: true
     flake8:
       enabled: true
-    rubocop:
-      enabled: true
     buf:
       enabled: true
     regal:
@@ -122,25 +106,13 @@ reviews:
       enabled: true
     pmd:
       enabled: true
-    cppcheck:
-      enabled: true
     semgrep:
-      enabled: true
-    circleci:
       enabled: true
     clippy:
       enabled: true
     sqlfluff:
       enabled: true
-    prismaLint:
-      enabled: true
-    pylint:
-      enabled: true
     oxc:
-      enabled: true
-    shopifyThemeCheck:
-      enabled: true
-    luacheck:
       enabled: true
     brakeman:
       enabled: true
@@ -158,9 +130,9 @@ chat:
   auto_reply: true
   integrations:
     jira:
-      usage: true
+      usage: disabled
     linear:
-      usage: true
+      usage: enabled
 
 knowledge_base:
   opt_out: false
